--- a/public/style.css
+++ b/public/style.css
@@ -6,11 +6,18 @@
     cursor: pointer;
 }
 
+:root[data-bs-theme="light"] .activetd {
+    background-color: #edfff6;
+}
+:root[data-bs-theme="dark"] .activetd {
+    background-color: #58ac82;
+}
+
 .chatbtn{
     background: linear-gradient(to right, #3ed163, #1a5f2a) !important;
     border-radius:50% !important;
     padding:15px !important;
-    border: none !important;
+    border: solid #444466 !important;
 }
 .chatbtn:hover{
     background: linear-gradient(to right, #7ddb94, #40754c) !important;
@@ -19,6 +26,54 @@
     transform: scale(0.90) !important;
 }
 
+.messagerow {
+    display:flex;
+    align-items:center;
+    gap:5px;
+    text-align:center;
+    border-radius:10px;
+}
+
+.messagerow .oldmessage{ 
+    color:black;
+    text-align: left;
+    max-width: 800px;
+    max-height: 220px;
+    overflow: auto;
+    padding:10px;
+    border-radius: 10px;
+}
+.messagerow .oldmessage *{ 
+    margin-bottom: 0;
+}
+:root[data-bs-theme="light"] .messagerow .oldmessage {
+    box-shadow: -2px 2px 0px 0px #d7d7d7;
+}
+:root[data-bs-theme="dark"] .messagerow .oldmessage {
+    box-shadow: -2px 2px 0px 0px #7e7e7e;
+}
+
+.messagerow .photo{
+    border:solid;
+    object-fit:contain;
+    background-color:black;
+    border-radius:50%;
+}
+
+.messagesCard{
+    box-shadow: -2px -2px #dbdbdb !important;
+    border-radius: 10px 0px 0px 0px !important;
+    border-right:solid 1px rgba(128, 128, 128, 0.397);
+    border-bottom:solid 1px rgba(128, 128, 128, 0.397);
+    overflow: auto;
+}
+
+:root[data-bs-theme="light"] .messagesCard {
+    background-color: rgb(255, 243, 239);
+}
+:root[data-bs-theme="light"] .messagesCard nobr {
+    color:black;
+}
 
 /* The Modal (background) */
 .modal {
@@ -71,5 +126,9 @@
 
     .burger-btn{
         display:inline-block !important;
+    }
+    .messagerow .photo{
+        width:50px;
+        height: 50px;
     }
         }
