--- a/public/style.css
+++ b/public/style.css
@@ -117,6 +117,10 @@
     border:1px solid rgb(230,230,230);
 }
 
+.userpagination{
+    margin-left: 100px !important;
+}
+
 .messagerow {
     display:flex;
     align-items:center;
@@ -147,6 +151,15 @@
 }
 :root[data-bs-theme="dark"] .messagerow .oldmessage {
     box-shadow: -2px 2px 0px 0px #7e7e7e;
+}
+
+#headerphoto{
+    border:solid;
+    object-fit:contain;
+    background-color:black;
+    border-radius:50%;
+    width:50px;
+    height:50px;
 }
 
 .messagerow .photo{
@@ -230,9 +243,10 @@
     cursor: pointer;
 }
 
-
-
-
+.terms{
+    font-size:1.1rem;
+    margin-bottom:1rem;
+}
 
 @media only screen and (max-width: 1200px){
     .burger-btn{
@@ -309,5 +323,13 @@
     }
     .searchcard .namesearch{
         width: 155px;
+    }
+
+    .userpagination{
+        margin-left: 0 !important;
+    }
+
+    #datefilter{
+        display: none;
     }
 }
