--- a/public/style.css
+++ b/public/style.css
@@ -134,6 +134,7 @@
     text-align: left;
     max-width: 800px;
     max-height: 220px;
+    word-break: break-word;
     overflow: auto;
     padding:10px;
     border-radius: 10px;
@@ -248,6 +249,7 @@
     margin-bottom:1rem;
 }
 
+
 @media only screen and (max-width: 1200px){
     .burger-btn{
         display:inline-block !important;
@@ -256,6 +258,9 @@
 
 
 @media only screen and (max-width: 650px){
+    #notificationsid{
+        left: -110px;
+    }
 
     .userrow{
         border-radius: 15px 15px 15px 15px;
