--- a/resources/views/partials/footer.html
+++ b/resources/views/partials/footer.html
@@ -3,7 +3,7 @@
 <footer>
     <div class="footer mb-0 text-muted" style="display:flex; justify-content:space-between;">
         <div>
-            <p>2024 &copy; <a href="#" style="text-decoration:underline;">Mohamed LEGHDAICH</a>.</p>
+            <p>2024 &copy; <a href="https://med2mad.github.io/Portfolio/index-fr.html" target="_blank" style="text-decoration:underline;">Mohamed LEGHDAICH</a>.</p>
         </div>
         <div>
             <ul class="list-unstyled d-inline-flex ms-auto mb-0">
